# camera

./: .gitignore  Interactive - hmmt_info.py.ipynb  README.md  ZYL_loop.py  ZYL_loop_in_thread_w_timeout.py  buffer_filling_intertrigger.py  camgui.py  checkbox_study.py  double_click_text.py  dpginit.ini  drag_rect_snapping.py  exttrigger.py  fake_frames_imports.py  grabimage.py  helper.py  hmmt_ZYL_danger.py  hmmt_basic_acquire.py  hmmt_exttrigger.py  hmmt_info.py  hmmt_test.py  multi_squares.py  mydpghelper.py  no_with_func.py  official_demo copy.py  official_demo.py  op_trigger_on_demand.py  op_trigger_ondemand_SLOW.py  pyproject.toml  python_ver_test.py  redraw_table.py  temptest.py  test.py  test_copy_camobj.py  theming_problem.py  tiff_imports.py  toggle_button.py  toggle_button_decoration.py  toggle_checkbox.py  trigger_study.py  uuidtest.py  (+2 more)
AWG_module/: coordinate_to_frequency.py  dds_dot_moving_queue_streaming_official.py  frame.tif  image_to_atom_array.py  no_with_func.py  no_with_func_test.py  rearrangement_method_no_reservior_zyl.py  rearrangement_method_no_reservior_zyl_v2.py  rearrangement_method_no_reservior_zyl_v3.py  rearrangement_method_no_reservior_zyl_v4.py  rearrangement_method_zylcopy.py  test.py  unified.py
AWG_test/: awg_open_close.py  dds_no_with_success.py
DCAM_SDK4_demo/: dcam_show_properties.py  dcamcon_masterpulse.py
_test_archived/: test_mp_opencam.py
camgui/: camgui.py  official_demo.py  queryrecthist.py  transparent_plot_layer.py
camguihelper/: core.py  dirhelper.py  dpghelper.py  test.py  utils.py
camtest/: ZYL_loop.py  (+4 more)
(+56 files in other folders)
