[project]
name = "mydpghelper"
version = "0.1.0"
description = "a bunch of helper functions and decorators for dpg project"
authors = [{name = "haiteng"}]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mydpghelper"]  # <== This is the key